--- a/activar/css/style.css
+++ b/activar/css/style.css
@@ -40,6 +40,26 @@ body {
 	font-smoothing: antialiased;
 }
 
+.btn {
+	border: 6px solid orange;
+	border-radius: 8px;
+  	background-color: orange;
+  	padding: 14px 66px;
+  	font-size: 16px;
+  	cursor: pointer;
+	display: inline-block;
+	color: white;
+}
+
+.btn:hover {background: white;}
+
+.kichthuoc {
+	weight:10px;
+	height:5px;
+	background-position: center center;
+	background-size: cover;
+}
+
 h1,
 h2,
 h3,
