--- a/activar/css/test.css
+++ b/activar/css/test.css
@@ -12,7 +12,7 @@
 }
 
 .bg-red{
-    background-color: red;
+    background-color: rgb(248, 63, 63);
 }
 
 .quest {
@@ -23,7 +23,7 @@
     margin-top: 10px;
     margin-bottom: 10px;
 	border-radius: 8px;
-  	background-color: white;
+  	background-color: rgb(121, 115, 115);
   	font-size: 16px;
 	display: inline-block;
     color: black;
@@ -39,7 +39,7 @@
     margin-bottom: 20px;
     margin-top: 20px;
 	border-radius: 12px;
-  	background-color: white;
+  	background-color: rgb(120, 120, 120);
   	font-size: 16px;
   	cursor: pointer;
 	display: inline-block;
@@ -47,11 +47,11 @@
 }
 
 .correct:focus {
-    background-color: greenyellow;
+    background-color: rgb(180, 245, 80);
 }
 
 .wrong:focus {
-    background-color: red;
+    background-color: rgb(225, 60, 60);
 }
 .quest{
     background-color: orange;
