--- a/activar/css/style.css
+++ b/activar/css/style.css
@@ -116,9 +116,12 @@ ol {
 }
 
 .set-bg {
+	width: 1450px;
+	height: 320px;
 	background-repeat: no-repeat;
-	background-size: cover;
+	background-size: contain;
 	background-position: top center;
+	margin-bottom: 20px;
 }
 
 .spad {
