--- a/activar/css/email_connection.css
+++ b/activar/css/email_connection.css
@@ -1,55 +1,67 @@
-@import "http://fonts.googleapis.com/css?family=Raleway";
+
 /*----------------------------------------------
 CSS Settings For HTML Div ExactCenter
 ------------------------------------------------*/
-h3,p,label {
+.feedback_h3 {
 text-align:center;
 font-family:'Raleway',sans-serif;
-color:#006400
+color:#151515
 }
 h2 {
 font-family:'Raleway',sans-serif
 }
 input {
-width:100%;
-margin-bottom:20px;
-padding:5px;
-height:30px;
-box-shadow:1px 1px 12px gray;
-border-radius:3px;
-border:none
+    width: 46%;
+    margin-bottom: 20px;
+    padding: 5px;
+    height: 30px;
+    box-shadow: 1px 1px 12px grey;
+    border-radius: 3px;
+    border: none;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 textarea {
-width:100%;
-height:80px;
-margin-top:10px;
-padding:5px;
-box-shadow:1px 1px 12px gray;
-border-radius:3px
+    width: 60%;
+    height: 120px;
+    margin-top: 10px;
+    padding: 5px;
+    box-shadow: 1px 1px 12px grey;
+    border-radius: 3px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 #send {
-width:103%;
-height:45px;
-margin-top:40px;
-border-radius:3px;
-background-color:#cd853f;
-border:1px solid #fff;
-color:#fff;
-font-family:'Raleway',sans-serif;
-font-size:18px
+    width: 40%;
+    height: 45px;
+    margin-top: 40px;
+    border-radius: 3px;
+    /* background-color: #cd853f; */
+    background: linear-gradient(90deg, #232526 0%, #414345 100%);
+    border: 1px solid #fff;
+    color: #fff;
+    font-family: 'Raleway',sans-serif;
+    font-size: 18px;
 }
 div#feedback {
-text-align:center;
-height:520px;
-width:330px;
-padding:20px 25px 20px 15px;
-background-color:#f3f3f3;
-border-radius:3px;
-border:1px solid #cd853f;
-font-family:'Raleway',sans-serif;
-float:left
+    text-align: center;
+    height: 520px;
+    width: 100%;
+    padding: 20px 25px 20px 15px;
+    /* background-color: #f3f3f3; */
+    background: linear-gradient(90deg, #F46B45 0%, #EEA849 100%);
+    /* transform: rotate(-180deg); */
+    border-radius: 3px;
+    border: 1px solid #cd853f;
+    font-family: 'Raleway',sans-serif;
+    float: left;
 }
-.container {
-width:960px;
+.feedback_container {
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+height: 520px;
 margin:40px auto
 }
