--- a/activar/css/style.css
+++ b/activar/css/style.css
@@ -3158,6 +3158,7 @@ ol {
 	width: 327px;
 	border-radius: 0 7px 10px 7px;
 	background-color: #ffffff;
+	background: linear-gradient(90deg, #F46B45 0%, #EEA849 100%);
   }
   
   .product-text {
@@ -3168,7 +3169,7 @@ ol {
   .product-text h1 {
 	margin: 0 0 0 38px;
 	padding-top: 52px;
-	font-size: 34px;
+	font-size: 39px;
 	color: #474747;
   }
   
@@ -3189,13 +3190,14 @@ ol {
   
   .product-text p {
 	height: 125px;
-	margin: 0 0 0 38px;
-	font-family: 'Playfair Display', serif;
-	color: #8d8d8d;
-	line-height: 1.7em;
-	font-size: 15px;
-	font-weight: lighter;
-	overflow: hidden;
+    margin: 0 38px 0 38px;
+    /* margin-left: auto; */
+    font-family: 'Playfair Display', serif;
+    color: #FFFAFA;
+    line-height: 1.7em;
+    font-size: 15px;
+    font-weight: lighter;
+    overflow: hidden;
   }
   
   .product-price-btn {
@@ -3226,24 +3228,70 @@ ol {
   
   .product-price-btn button {
 	float: right;
-	display: inline-block;
-	height: 50px;
-	width: 176px;
-	margin: 0 40px 0 16px;
-	box-sizing: border-box;
-	border: transparent;
-	border-radius: 60px;
-	font-family: 'Raleway', sans-serif;
-	font-size: 14px;
-	font-weight: 500;
-	text-transform: uppercase;
-	letter-spacing: 0.2em;
-	color: #ffffff;
-	background-color: #9cebd5;
-	cursor: pointer;
-	outline: none;
+    /* margin-left: 10%; */
+    /* margin-right: 16%; */
+    display: inline-block;
+    background: linear-gradient(90deg, #232526 0%, #414345 100%);
+    border: 1px solid #fff;
+    box-shadow: 1px 1px 12px grey;
+    height: 50px;
+    width: 176px;
+    margin: 0 40px 0 16px;
+    box-sizing: border-box;
+    /* border: transparent; */
+    border-radius: 60px;
+    font-family: 'Raleway', sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    color: #ffffff;
+    background-color: #9cebd5;
+    cursor: pointer;
+    outline: none;
   }
   
   .product-price-btn button:hover {
 	background-color: #79b0a1;
+  }
+
+
+
+
+  .button {
+	position: relative;
+	background: linear-gradient(90deg, #232526 0%, #414345 100%);
+	border: 1px solid #fff;
+	
+	font-size: 28px;
+	color: #FFFFFF;
+	padding: 20px;
+	width: 200px;
+	text-align: center;
+	align-items:center;
+	-webkit-transition-duration: 0.4s; /* Safari */
+	transition-duration: 0.4s;
+	text-decoration: none;
+	overflow: hidden;
+	cursor: pointer;
+  }
+  
+  .button:after {
+	content: "";
+	background: linear-gradient(90deg, #F46B45 0%, #EEA849 100%);
+	display: block;
+	position: absolute;
+	padding-top: 300%;
+	padding-left: 350%;
+	margin-left: -20px!important;
+	margin-top: -120%;
+	opacity: 0;
+	transition: all 0.8s
+  }
+  
+  .button:active:after {
+	padding: 0;
+	margin: 0;
+	opacity: 1;
+	transition: 0s
   }
